syntax = "proto3";

package model.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";
import "../../../model/model/v1alpha/common.proto";

// VisualQuestionAnsweringInput represents the input of visaul question answering task
message VisualQuestionAnsweringInput {
  // The prompt text
  string prompt = 1 [(google.api.field_behavior) = REQUIRED];
  // The Prompt Image, only for multimodal input
  oneof type {
    // Image type URL
    string prompt_image_url = 2;
    // Image type base64
    string prompt_image_base64 = 3;
  }
  // The maximum number of tokens for model to generate
  optional int32 max_new_tokens = 4 [(google.api.field_behavior) = OPTIONAL];
  // The temperature for sampling
  optional float temperature = 5 [(google.api.field_behavior) = OPTIONAL];
  // Top k for sampling
  optional int32 top_k = 6 [(google.api.field_behavior) = OPTIONAL];
  // The seed
  optional int32 seed = 7 [(google.api.field_behavior) = OPTIONAL];
  // The extra parameters
  repeated ExtraParamObject extra_params = 8 [(google.api.field_behavior) = OPTIONAL];
}

// VisualQuestionAnsweringOutput represents the output of visaul question answering task
message VisualQuestionAnsweringOutput {
  // The text generated by the model
  string text = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}
